--- a/AgeInMinutes/app/src/main/AndroidManifest.xml
+++ b/AgeInMinutes/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.AgeInMinutes"
         tools:targetApi="31">
         <activity
+            android:name=".AddExpenseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewExpensesActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
