--- a/AgeInMinutes/app/src/main/AndroidManifest.xml
+++ b/AgeInMinutes/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.AgeInMinutes"
         tools:targetApi="31">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ViewSavingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddExpenseActivity"
             android:exported="false" />
         <activity
