--- a/AgeInMinutes/app/src/main/AndroidManifest.xml
+++ b/AgeInMinutes/app/src/main/AndroidManifest.xml
@@ -14,19 +14,20 @@
         android:theme="@style/Theme.AgeInMinutes"
         tools:targetApi="31">
         <activity
-            android:name=".SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewSavingsActivity"
+            android:name=".activities.ViewSavingsActivity"
             android:exported="false" />
         <activity
-            android:name=".AddExpenseActivity"
+            android:name=".activities.AddExpenseActivity"
             android:exported="false" />
         <activity
-            android:name=".ViewExpensesActivity"
-            android:exported="false" />
+            android:name=".activities.ViewExpensesActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.NoActionBar"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
