--- a/backend/fun_with_flags/neph-funwithflags-crud/src/main/resources/application.properties
+++ b/backend/fun_with_flags/neph-funwithflags-crud/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=9090
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/fun_with_flags
+spring.datasource.username=root
+spring.datasource.password=Br00k51d3
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
